--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Hello Code Fellows!</h1>
-<p>This is an example welcome page. Use yours to introduce yourself.</p>
+<h1>Sean Frederick</h1>
+<p>Hey, my name is Sean and I am a web developer in the Seattle area.</p>
