--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="a portfolio site">
-    <meta name="author" content="Brook Riggio and Ivan Storck">
+    <meta name="author" content="Sean Frederick">
 
-    <title>Code Fellows Rails Portfolio</title>
+    <title>Sean Frederick Portfolio</title>
 
     <!-- Add custom CSS here
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -260,7 +260,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Code Fellows 2013</p>
+            <p>Copyright &copy; Sean Frederick 2013</p>
           </div>
         </div>
       </footer>
