--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
      -->
 
     <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag :modernizr %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
@@ -71,7 +72,7 @@
       </div><!-- /.container -->
     </nav>
 
-    <div id="myCarousel" class="carousel slide">
+    <!-- <!-- <!-- <div id="myCarousel" class="carousel slide">
       <!-- Indicators -->
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -110,7 +111,7 @@
         </a>
     </div>
 
-    <div class="section">
+<!--     <div class="section">
 
       <div class="container">
 
@@ -129,9 +130,9 @@
           </div>
         </div><!-- /.row -->
 
-      </div><!-- /.container -->
+      <!-- </div><!-- /.container -->
 
-    </div><!-- /.section -->
+    <!-- </div>/.section -->
 
     <div class="section-colored text-center">
 
@@ -139,8 +140,8 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <h2>Modern Business: A Clean &amp; Simple Full Website Template by Start Bootstrap</h2>
-            <p>A complete website design featuring various single page templates from Start Bootstraps library of free HTML starter templates.</p>
+            <!-- <h2>Modern Business: A Clean &amp; Simple Full Website Template by Start Bootstrap</h2>
+            <p>A complete website design featuring various single page templates from Start Bootstraps library of free HTML starter templates.</p> -->
             <%= yield %>
             <hr>
           </div>
