Devise is now working properly

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing projects</h1>
+<h1>Edit Project</h1>
 
-<%= render 'form' %>
+<%= render "form" %>
 
-<%= link_to 'Show', @projects %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to "Cancel", :back %>
