--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,13 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About</a></li>
             <li><%= link_to "Blog", posts_path %></li>
-            <li><a href="#contact">Contact</a></li>
+            <% if current_user.present? %>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign Up", new_user_registration_path %></li>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
+            <% end %>
+
             <!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
               <ul class="dropdown-menu">
