--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing posts</h1>
+<h1>Blog</h1>
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>Title</th>
     <th>Body</th>
@@ -8,18 +8,26 @@
     <th></th>
     <th></th>
   </tr>
-
 <% @posts.each do |post| %>
   <tr id="<%= dom_id(post) %>">
     <td><%= post.title %></td>
-    <td><%= post.body %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td>
+      <%= post.body %>
+    </td>
+    <td><%= link_to 'Show', post, class: "btn" %></td>
+    <% if policy(post).update? %>
+      <td>
+        <%= link_to 'Edit', edit_post_path(post), class: "btn btn-default" %>
+        <p class="pull-right"><%= "Published" if post.published %></p>
+      </td>
+    <% end %>
+    <% if policy(post).destroy? %>
+      <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-danger" %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, class: "btn btn-primary" if policy(Post).create? %>
