--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,13 @@
   <%= @post.body %>
 </p>
 
+<% if policy(@post).update? %>
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+<% end %>
+<%= render "comments/form" %>
+
+
+
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
