--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,12 +43,12 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About</a></li>
             <li><%= link_to "Blog", posts_path %></li>
-            <li><%= link_to "Projects", projects_path %></li>
             <% if current_user.present? %>
               <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
             <% else %>
               <li><%= link_to "Sign Up", new_user_registration_path %></li>
               <li><%= link_to "Sign In", new_user_session_path %></li>
+              <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %>
             <% end %>
 
             <!-- <li class="dropdown">
