--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,27 +1,18 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Title:</b>
-  <%= @post.title %>
-</p>
+<article>
+<h1><%= @post.title %></h1>
 
 <p id="author">
   <b>By:</b>
   <%= @post.author.email %>
 </p>
 
-<p>
-  <b>Body:</b>
+<div id="post_body">
   <%= @post.body %>
-</p>
-
+</div>
+<hr>
 <% if policy(@post).update? %>
   <%= link_to 'Edit', edit_post_path(@post) %> |
 <% end %>
+</article>
 <%= render "comments/form" %>
-
-
-
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<p class="back_link"><%= link_to 'Back to the blog', posts_path %></p>
