fixed comments controller

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <%= form_for(@comment) do |f| %>
+  <%= form_for [@post, @comment] do |f| %>
     <div class="field">
       <%= f.label :author, "Your name" %>
       <%= f.text_field :author %>
@@ -35,4 +35,3 @@
     <div>
   <% end %>
 </div><!-- .comment_form -->
-
