--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,6 +13,19 @@
 <% if policy(@post).update? %>
   <%= link_to 'Edit', edit_post_path(@post) %> |
 <% end %>
+
+  <b>Comments:</b><br><br>
+    <% @post.comments.each do |comment| %>
+      <% #if comment.approved? %>
+        <strong><%= comment.content %></strong><br>
+        Author: <%= comment.author %><br>
+        <% if comment.author_url? %>
+        URL: <%= comment.author_url %><br>
+        <% end %>
+        Email: <%= comment.author_email %>
+      <% #end %>
+    <br><br><% end %><br><br>
+
 </article>
 <%= render "comments/form" %>
 <p class="back_link"><%= link_to 'Back to the blog', posts_path %></p>
