--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,15 +1,24 @@
+<h1>Projects</h1>
+
+<table class="table table-striped">
+  <tr>
+    <th>Name</th>
+    <th>Technologies Used</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
 <% @projects.each do |project| %>
-  <div class="project" id="<%= dom_id(project) %>">
-    <h3><%= project.name %></h3>
-    <p><%= project.technologies_used %></p>
-    <div class="nav">
-      <%= link_to 'Show', project %> |
-      <%= link_to 'Edit', edit_project_path(project) %> |
-      <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %>
-    </div>
-  </div>
+  <tr id="<%= dom_id(project) %>">
+    <td><%= project.name %></td>
+    <td>
+      <%= project.technologies_used %>
+    </td>
+    <td><%= link_to 'Show', project, class: "btn" %></td>
+  </tr>
 <% end %>
+</table>
 
 <br />
 
-<%= link_to 'New project', new_project_path %>
+<%= link_to 'New Post', new_post_path, class: "btn btn-primary" if policy(Post).create? %>
